<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.MainActivity">

    <FrameLayout
        android:id="@+id/main_frame_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_radio_group"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/main_btm_wire"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/wire_color_e5e5"
        app:layout_constraintBottom_toTopOf="@+id/main_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/main_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="@dimen/dp_50"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/home_radio_btn"
            style="@style/MainBtm.RadioBtnStyle"
            android:checked="true"
            android:drawableTop="@drawable/dhl_home_radio_btn_selector"
            android:text="@string/home_str" />

        <RadioButton
            android:id="@+id/circle_radio_btn"
            style="@style/MainBtm.RadioBtnStyle"
            android:visibility="visible"
            android:drawableTop="@drawable/dhl_circle_radio_btn_selector"
            android:text="@string/circle_str" />

        <RadioButton
            android:id="@+id/zm_radio_btn"
            style="@style/MainBtm.RadioBtnStyle"
            android:drawableTop="@drawable/dhl_circle_radio_btn_selector"
            android:text="@string/zm_str"
            android:visibility="visible"/>

        <RadioButton
            android:id="@+id/market_radio_btn"
            style="@style/MainBtm.RadioBtnStyle"
            android:visibility="gone"
            android:drawableTop="@drawable/dhl_market_radio_btn_selector"
            android:text="@string/market_str" />

        <RadioButton
            android:id="@+id/mine_radio_btn"
            style="@style/MainBtm.RadioBtnStyle"
            android:drawableTop="@drawable/dhl_mine_radio_btn_selector"
            android:text="@string/mine_str" />
    </RadioGroup>

    <ImageView
        android:id="@+id/main_zm_img"
        android:layout_width="@dimen/dp_55"
        android:layout_height="@dimen/dp_55"
        android:layout_marginBottom="@dimen/dp_14"
        android:src="@mipmap/dhl_zm_unselected_icon"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/main_radio_group"
        app:layout_constraintLeft_toLeftOf="@+id/main_radio_group"
        app:layout_constraintRight_toRightOf="@+id/main_radio_group" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_btn"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_width="@dimen/dp_50"
        android:visibility="gone"
        android:layout_height="@dimen/dp_50" />

    <View
        android:id="@+id/main_act_btm_v"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dhsjh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>